bon/tests/integration/ui/compile_fail/diagnostic_on_unimplemented.stderr
error[E0277]: the member `bon::__::Unset<y>` was not set, but this method requires it to be set
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:14:37
   |
14 |     let _ = Example::builder().x(1).build();
   |                                     ^^^^^ the member `bon::__::Unset<y>` was not set, but this method requires it to be set
   |
   = help: the trait `bon::__::IsSet` is not implemented for `bon::__::Unset<y>`
note: required for `SetX` to implement `IsComplete`
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:4:14
   |
 4 |     #[derive(Builder)]
   |              ^^^^^^^ type parameter would need to implement `IsComplete`
   = help: consider manually implementing `IsComplete` to avoid undesired bounds
note: required by a bound in `ExampleBuilder::<S>::build`
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:4:14
   |
 4 |     #[derive(Builder)]
   |              ^^^^^^^ required by this bound in `ExampleBuilder::<S>::build`
 5 |     struct Example {
   |            ------- required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the member `bon::__::Unset<renamed>` was not set, but this method requires it to be set
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:14:37
   |
14 |     let _ = Example::builder().x(1).build();
   |                                     ^^^^^ the member `bon::__::Unset<renamed>` was not set, but this method requires it to be set
   |
   = help: the trait `bon::__::IsSet` is not implemented for `bon::__::Unset<renamed>`
note: required for `SetX` to implement `IsComplete`
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:4:14
   |
 4 |     #[derive(Builder)]
   |              ^^^^^^^ type parameter would need to implement `IsComplete`
   = help: consider manually implementing `IsComplete` to avoid undesired bounds
note: required by a bound in `ExampleBuilder::<S>::build`
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:4:14
   |
 4 |     #[derive(Builder)]
   |              ^^^^^^^ required by this bound in `ExampleBuilder::<S>::build`
 5 |     struct Example {
   |            ------- required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the member `bon::__::Set<y>` was already set, but this method requires it to be unset
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:17:37
   |
17 |     let _ = Example::builder().y(1).y(2);
   |                                     ^ the member `bon::__::Set<y>` was already set, but this method requires it to be unset
   |
   = help: the trait `bon::__::IsUnset` is not implemented for `bon::__::Set<y>`
note: required by a bound in `ExampleBuilder::<S>::y`
  --> tests/integration/ui/compile_fail/diagnostic_on_unimplemented.rs:4:14
   |
 4 |     #[derive(Builder)]
   |              ^^^^^^^ required by this bound in `ExampleBuilder::<S>::y`
...
 7 |         y: u32,
   |         - required by a bound in this associated function
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
